Adding VSCode role.

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,8 @@
 ---
 - hosts: all
   roles:
-    - {role: 'core', tags: 'core'}
-    - {role: 'vscode', tags: 'vscode'}
+    - { role: "core", tags: "core" }
+    - { role: "vscode", tags: "vscode" }
+  vars:
+    user_home_path: "/home/tristan/"
+    default_user: "tristan"
