--- a/playbook.yml
+++ b/playbook.yml
@@ -4,6 +4,7 @@
     - { role: "core", tags: "core" }
     - { role: "vscode", tags: "vscode" }
     - { role: "javascript", tags: "javascript"}
+    - { role: "i3", tags: "i3"}
   vars:
     - user_home_path: "/home/tristan/"
     - default_user: "tristan"
