Adding some fonts and python config.

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,6 +6,7 @@
     - { role: "javascript", tags: "javascript"}
     - { role: "i3", tags: "i3"}
     - { role: "study", tags: "study"}
+    - { role: "python", tags: "python"}
   vars:
     - user_home_path: "/home/tristan/"
     - default_user: "tristan"
