--- a/roles/core/tasks/main.yml
+++ b/roles/core/tasks/main.yml
@@ -53,3 +53,14 @@
   user:
     name: "{{ default_user }}"
     shell: /bin/zsh
+
+- name: Download Google Chrome deb
+  get_url:
+    url: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    dest: /tmp/google-chrome.deb
+
+- name: Install Google Chrome
+  become: true
+  become_user: root
+  apt:
+    deb: /tmp/google-chrome.deb
