Adding in pinyin support.

--- a/roles/study/tasks/main.yml
+++ b/roles/study/tasks/main.yml
@@ -5,3 +5,9 @@
   apt:
     name: anki
     update_cache: true
+- name: Setup Pinyin keyboard support
+  become: true
+  become_user: root
+  apt:
+    name: ibus-pinyin
+    update_cache: true
