--- a/playbook.yml
+++ b/playbook.yml
@@ -3,12 +3,13 @@
   roles:
     - { role: "core", tags: "core" }
     - { role: "vscode", tags: "vscode" }
-    - { role: "javascript", tags: "javascript"}
-    - { role: "i3", tags: "i3"}
-    - { role: "study", tags: "study"}
-    - { role: "python", tags: "python"}
-    - { role: "office", tags: "office"}
-    - { role: "cloud", tags: "cloud"}
+    - { role: "javascript", tags: "javascript" }
+    - { role: "i3", tags: "i3" }
+    - { role: "study", tags: "study" }
+    - { role: "python", tags: "python" }
+    - { role: "office", tags: "office" }
+    - { role: "cloud", tags: "cloud" }
+    - { role: "media", tags: "media" }
   vars:
     - user_home_path: "/home/tristan/"
     - default_user: "tristan"
