--- a/playbook.yml
+++ b/playbook.yml
@@ -7,6 +7,7 @@
     - { role: "i3", tags: "i3" }
     - { role: "study", tags: "study" }
     - { role: "python", tags: "python" }
+    - { role: "ruby", tags: "ruby" }
     - { role: "office", tags: "office" }
     - { role: "cloud", tags: "cloud" }
     - { role: "media", tags: "media" }
